MDEV-34181  Instant table aborts after discard tablespace

- commit 85db5347311340e39753b0200fb9d459a5024535 (MDEV-33400)
retains the instantness in the table definition after discard
tablespace. So there is no need to assign n_core_null_bytes
during instant table preparation unless they are not
initialized.